# CodeBaseToVector

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_server.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_docker.sh  test_rpc.py  test_server.py  vector_store.py
mcp_server/src/config/: config.py
src/codebase_mcp/: __init__.py  __main__.py  mcp_server.py
src/config/: config.py  settings.py
src/services/: code_parser.py  codebase_service.py  service_factory.py  vector_embedding.py  vector_storage.py
src/type_definitions/: __init__.py  code_types.py
test_app/: build.gradle
test_app/src/main/java/com/example/demo/controller/: UserController.java
tests/: conftest.py  test_code_parser.py  test_codebase_service.py  test_vector_embedding.py  test_vector_storage.py
