[project]
name = "codebase-mcp"
version = "0.1.0"
description = "Upload Your Codebase to VectorStorage"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "llm", "woo"]
dependencies = [
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "langchain-google-genai>=0.0.11",
    "langchain-core>=0.1.53",
    "qdrant-client>=1.7.0",
    "tree-sitter>=0.20.4",
    "python-dotenv>=1.0.1",
    "aiofiles>=23.2.1",
    "tree_sitter>=0.20.4",
    "tree_sitter_languages>=1.10.2",
    "click>=8.1.7",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
codebase-mcp = "codebase_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
    "pytest>=7.4.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

